<resources>
    <string name="app_name">Github Ui Viewer</string>
    <string name="user_avatar">User avatar</string>
    <string name="sign_in">Sign in</string>
    <string name="updating_data">Updating data…</string>
    <string name="error_update_token">Error update token</string>
    <string name="try_again">Try again</string>
    <string name="netwotk_error">Network is out</string>
    <string name="error_title">Error</string>
    <string name="dataloading_error">An error occurred while loading data</string>

    <string name="page_readme_title">README</string>
    <string name="page_contributors_title">Contributors</string>
    <string name="page_issues_title">Issues</string>
    <string name="emoji_like">👍</string>
    <string name="emoji_dislike">👎</string>
    <string name="emoji_laugh">😄</string>
    <string name="emoji_confused">😕</string>
    <string name="emoji_heart">❤</string>
    <string name="emoji_hoorey">🎉</string>
    <string name="emoji_rocket">🚀</string>
    <string name="emoji_eyes">👀</string>
</resources>